--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
   --red: #F20519;
   --yellow: #F2CB05;
   --green: #55D976;
+  --greenb: #027313;
 }
 /* Paleta de cores */
 
@@ -35,6 +36,38 @@ body{
   color: var(--white);
 }
 /* Configurando cores padrões */
+
+header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+  /* Posicionamento das caixas */
+}
+
+.button button{
+  width: 180px;
+  height: 65px;
+  /* Tamanho padrão dos botões */
+  font-weight: 600;
+  /* Força da fonte */
+  border: none;
+  border-radius: 14px;
+  /* Bordas */
+  cursor: pointer;
+  /* Cursor */
+}
+
+.button-purple button{
+  background-color: var(--purples);
+  color: var(--white);
+  /* Cores */
+}
+
+.button-green button{
+  background-color: var(--greenb);
+  color: var(--white);
+}
 
 footer{
   padding: 100px;
