--- a/style.css
+++ b/style.css
@@ -37,14 +37,17 @@ body{
 }
 /* Configurando cores padrões */
 
+
+/* Aqui é a estilização do nosso header */
 header{
-  display: flex;
-  justify-content: center;
+  display: flex; /* Deixamos os itens lado a lado*/
+  justify-content: center; /*Justificamos os conteúdos*/
   align-items: center;
-  gap: 5rem;
+  gap: 5rem; 
   /* Posicionamento das caixas */
 }
 
+/* chamamos os nossos botões para estilizar */
 .button button{
   width: 180px;
   height: 65px;
