--- a/home.css
+++ b/home.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* Fonte */
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: Poppins;
 }
 
 html{
@@ -20,6 +23,13 @@ header{
     text-align: center;
 }
 
+header img{
+    width: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 header a{
     margin-right: 2vh;
     color: #F2F2F2;
@@ -28,7 +38,7 @@ header a{
 }
 
 header a:hover{
-    border-bottom: 2px solid white;
+    border-bottom: 2.5px solid#643DF2;
     transition: 0.1s;
 }
 
@@ -50,4 +60,9 @@ font-weight: 600;
         transition: 0.8s;
         font-weight: 700;
         cursor: pointer;
+    }
+
+    .section-1{
+        padding: min(50vh, 45rem);
+        background-color: #0D0D0D;
     }
