--- a/style.css
+++ b/style.css
@@ -202,36 +202,21 @@ span{
 }
 
 footer{
-  padding: 100px;
-  background-color: rgb(206, 216, 198);
-  text-align: center;
-}
-/* Rodapé do site */
-
-.div-digital{
-  display: flex; 
-  justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* Posicionamento */
+  background-color: var(--gray);
 }
 
-.div-digital p{
-  text-align: center;
-   color: rgb(0, 0, 0);
-   font-size: 1.8;
+.flexbox-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+  /* Posicionamento */
 }
 
-.div-i hr{
-  margin-top: 10px;
-}
-
-.div-i i{
-  margin-top: 1em;
-  margin: 2rem;
-  color: rgb(4, 175, 167);
-  font-size: 2rem;
-  font-weight: 800;
-}
-
-.div-i i:hover{
-  color: rgb(207, 5, 106);
-  transition: 0.9s;
+.box-footer img{
+  width: 200px;
 }
