--- a/home.css
+++ b/home.css
@@ -109,7 +109,7 @@ color: #643DF2;
 
 
     .section2{
-        background-color: #F2F2F2;
+        background-color: black;
         padding: min(45vh, 40rem);
         width: 100%;
     }
@@ -135,5 +135,58 @@ color: #643DF2;
 
     footer{
         padding: min(6vh, 3rem);
-        background-color: #987cff;
+        background-color: #F2F0EB;
     }
+    
+
+    footer i{
+        margin-top: 5px;
+    color: #0D0D0D;
+    }
+
+    footer i span{
+        margin-left: 5px;
+        font-weight: 800;
+    }
+
+
+    .container-footer{
+display: flex;
+gap: 50px;
+    }
+
+    .itens-footer1{
+        display: flex;
+        flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     font-size: 1.3rem;
+    
+    }
+
+
+
+    footer ul li{
+        color: #0D0D0D;
+        font-weight: 800;
+        font-size: 1.2rem;
+    }
+
+    footer ul li span{
+color: #643DF2;     
+    }
+
+            footer ul li:hover{
+                color: #643DF2; 
+                transition: 0.4s;  
+            }
+
+
+            footer img{
+                width: 10rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+           
+
+                    }
