home.css (COMENTADO)

--- a/home.css
+++ b/home.css
@@ -1,70 +1,113 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* Fonte */
-*{
+*{ 
+/* Definições fixas do site */
     padding: 0;
+/* Zerando o padding */
     margin: 0;
+/*  Zerando a margem */
     box-sizing: border-box;
+/* Pra página não quebrar */
     list-style: none;
+/* Tirando o estilo das listas */
     text-decoration: none;
+/* Tirando o sub-linhado */
     font-family: Poppins;
+/* Fonte da página */
 }
 
 body{
    background-color: #0D0D0D;
+/* Cor de fundo da página */
 }
 
 html{
+/* Definições na raiz do html */
     width: 100%;
+/* Para ocupar 100% da largura */
     height: 100vh;
+/*  100vh para que a página tenha a mesma altura do navegador */
 }
 
+
+/* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
 header{
     padding: min(4vh, 8rem);
+/*  Tamanho do cabeçalho */
     background-color: #0D0D0D;
+/* Cor de fundo */
     display: flex;
+/* Tornando Flex */
     justify-content: space-between;
+/*  Justificando o conteúdo */
     align-items: center;
+/* Alinhando itens ao centro */
     text-align: center;
+/* Alinhando os textos ao centro */
     position: sticky;
+/* Fixando o cabeçalho ao rolar a página */
 top: 0;
+/* Zerando a parte de cima */
 left: 0;
+/* Zerando a esquerda (Que é por onde o elemento aparece) */
 z-index: 999;
+/*  Dando prioridade */
 width: 100%;
+/* Pra ocupar 100% do espaço */
 }
 
 header img{
+/* Estilização da logo */
     width: 5rem;
+/* Tamanho */
     display: flex;
+    /* Tornando Flex */
     align-items: center;
+/* Alinhando item a centro */
     justify-content: center;
+    /*  Justificando o conteúdo */
 }
 
 header a{
     margin-right: 2vh;
+/*  Espaçento na esquerda */
     color: #F2F2F2;
+/*  Cor do texto */
     font-weight: 800;
+    /* Peso da fonte */
 
 }
 
 header a:hover{
     border-bottom: 2.5px solid#643DF2;
+    /* Criando uma borda sólida com cor */
     transition: 0.1s;
+/* Tempo de transição */
 }
 
-
+/* Estilização do boneco de login */
 .login{
  width: 2rem;
+/* Largura da caixa */
  height: 2rem;
+/* Altura da caixa*/
  background-color: black;
+/* Cor de fundo da caixa */
  border-radius: 50%;
+/*  Arredondamento do container */
  border: solid 2px #F2F0EB;
  display: flex;
+    /* Tornando Flex */
  align-items: center;
+    /* Alinhando item a centro */
  justify-content: center;
+    /*  Justificando o conteúdo */
  padding: 20px;
+/* Respiro */
 }
 
 .login:hover{
+/* Hover para mudarmos algo ao passar o mouse por cima */
     background-color:#F2F0EB ;
     transition: 0.8s;
     cursor: pointer;
@@ -72,14 +115,23 @@ header a:hover{
 
  header i{
 font-size: 1.5rem;
+/* Tamanho */
 color: #643DF2;
+/* Cor do texto */
  }
- 
- 
+
+/* FIM DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
+
+
+/*  ESTILIZAÇÃO DA PRIMEIRA SESSÃO*/
+
  .section-1{
         padding: min(5vh, 5rem);
+/* Tamanho */
         background-color: #0D0D0D;
+/* Cor de fundo */
         width: 100%;
+/* Preencher 100% do tamanho */
     }
 
     .container-carrossel{
@@ -88,7 +140,9 @@ color: #643DF2;
         max-width: 80vw; /* O container ocupa no máximo 80% da largura da viewport */
         margin: auto; /*Centraliza o container*/
         border: 3px solid #643DF2;
+        /* Criando uma borda sólida com cor */
         border-radius: 20px;
+/*  Arredondamento do carrossel  */
     }
     
     /*Estilo da faixa de imagens*/
@@ -101,70 +155,97 @@ color: #643DF2;
     .carrossel-item{
     flex: 0 0 100%;  /* Cada item ocupa 100% da largura do container*/
     }
-    
+
+/* Estilização das imagens */
     img{
     width: 100%; /*As imagens ocupam toda a largura do item*/
     display: block; /*Garante que não haja espaçamento abaixo das imagens*/
     }
 
+/*  FIM DA PRIMEIRA SESSÃO */
 
+
+/* ESTILIZAÇÃO DA SEGUNDA SESSÃO */
     .section2{
         background-color: #0D0D0D;
+/* Cor de fundo */
         padding: min(45vh, 40rem);
+/* Tamanho */
         width: 100%;
+/* Preencher 100% do tamanho*/
         color: white;
+/* Cor do texto */
     }
 
-
+/* Caixa pai da sessão */
     .container-section2{
         display: flex;
+        /* Tornando Flex */
         align-items: center;
+        /* Alinhando item a centro */
         gap: 80px;
+/* Espaçamento entre os itens */
     }
 
 
-.h1-button{
-    ;
-}
 
 .h1-button h1{
     font-size: 2rem;
+/* Tamanho do texto */
     margin-bottom: 30px;
+    /*  Espaçamento na parte de baixo */
 }
 
 .h1-button p{
     font-size: 1rem;
+/* Tamanho do texto */
     margin-bottom: 30px;
-    
+/*  Espaçamento na parte de baixo */
 }
 
 .h1-button p span{
     color: #987cff;
+/* Cor do texto */
     font-weight: 600;
+/* Peso da fonte */
 }
 
 
 .h1-button a button{
     padding: 8px;
+/*  Folga dentro do botão */
     text-align: center;
+/* Alinhando texto ao centro */
 width: 200px;
+/* Largura do botão */
 border-radius: 40px;
+/* Arredondamento do botão */
 background-color: #643DF2;
+/* Cor de fundo do botão */
 color: #F2F0EB;
+/* Cor do texto */
 border: 2px solid #987cff;
+/* Criando uma borda sólida com cor */
 cursor: pointer;
+/* Mudando o cursor */
 font-weight: 600;
+    /* Peso da fonte */
 }
 
 .h1-button a button:hover{
+    /* Hover para mudarmos algo ao passar o mouse por cima */
     background-color: #987cff;
+    /* Cor do texto */
     transition: 0.5s;
+/*  Tempo de transição */
     color: #0D0D0D;
+/* Cor do texto */
 }
 
-
+/* Estilização da imagem */
 .img-section2{
     width: 400vw;
+/* Tamanho da imagem */
 }
 
 
@@ -173,44 +254,46 @@ font-weight: 600;
 
 
 
-
-
-
-
-
-
-
-
-
+/* INÍCIO DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
     footer{
         padding: min(6vh, 3rem);
+/*  Tamanho */
         background-color: #F2F0EB;
+/* Cor de fundo */
     }
     
 
     footer i{
         margin-top: 5px;
     color: #0D0D0D;
+/* Cor do texto */
     }
 
     footer i span{
         margin-left: 5px;
+/* Espaçamento na esquerda */
         font-weight: 800;
+        /* Peso da fonte */
     }
 
 
     .container-footer{
 display: flex;
+/* Tornando flex (deixando os itens na vertical) */
 gap: 50px;
+/*  Espaçamento entre os itens */
     }
 
     .itens-footer1{
         display: flex;
+        /* Tornando Flex */
         flex-direction: column;
      justify-content: center;
+        /*  Justificando o conteúdo */
      align-items: center;
+        /* Alinhando item a centro */
      font-size: 1.3rem;
-    
+    /* Tamanho do texto */
     }
 
 
@@ -218,7 +301,9 @@ gap: 50px;
     footer ul li{
         color: #0D0D0D;
         font-weight: 800;
+        /* Peso da fonte */
         font-size: 1.2rem;
+        /* Tamanho do texto */
     }
 
     footer ul li span{
@@ -226,6 +311,7 @@ color: #643DF2;
     }
 
             footer ul li:hover{
+                /* Hover para mudarmos algo ao passar o mouse por cima */
                 color: #643DF2; 
                 transition: 0.4s;  
             }
@@ -234,8 +320,14 @@ color: #643DF2;
             footer img{
                 width: 10rem;
                 display: flex;
+                /* Tornando Flex */
                 align-items: center;
+                /* Alinhando item a centro */
                 justify-content: center;
-           
+           /*  Justificando o conteúdo */
 
                     }
+
+
+
+/* FIM DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
