--- a/contatos.css
+++ b/contatos.css
@@ -143,3 +143,92 @@ width: 100%;
     align-items: center;
     gap: 5rem;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/* INÍCIO DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
+    footer{
+        padding: min(6vh, 3rem);
+/*  Tamanho */
+        background-color: #F2F0EB;
+/* Cor de fundo */
+    }
+    
+
+    footer i{
+        margin-top: 5px;
+    color: #0D0D0D;
+/* Cor do texto */
+    }
+
+    footer i span{
+        margin-left: 5px;
+/* Espaçamento na esquerda */
+        font-weight: 800;
+        /* Peso da fonte */
+    }
+
+
+    .container-footer{
+display: flex;
+/* Tornando flex (deixando os itens na vertical) */
+gap: 50px;
+/*  Espaçamento entre os itens */
+    }
+
+    .itens-footer1{
+        display: flex;
+        /* Tornando Flex */
+        flex-direction: column;
+     justify-content: center;
+        /*  Justificando o conteúdo */
+     align-items: center;
+        /* Alinhando item a centro */
+     font-size: 1.3rem;
+    /* Tamanho do texto */
+    }
+
+
+
+    footer ul li{
+        color: #0D0D0D;
+        font-weight: 800;
+        /* Peso da fonte */
+        font-size: 1.2rem;
+        /* Tamanho do texto */
+    }
+
+    footer ul li span{
+color: #643DF2;     
+    }
+
+            footer ul li:hover{
+                /* Hover para mudarmos algo ao passar o mouse por cima */
+                color: #643DF2; 
+                transition: 0.4s;  
+            }
+
+
+            footer img{
+                width: 10rem;
+                display: flex;
+                /* Tornando Flex */
+                align-items: center;
+                /* Alinhando item a centro */
+                justify-content: center;
+           /*  Justificando o conteúdo */
+
+                    }
+
+
+
+/* FIM DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
