--- a/contatos.css
+++ b/contatos.css
@@ -145,12 +145,19 @@ width: 100%;
 
  .div-button button{
     height: 50px;
-    width: 17rem;
+    width: 18rem;
     border-radius: 1.5rem;
     font-size: 20px;
     font-weight: 800;
     color: white;
     background-color: black;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 10px;
  }
 
 
