--- a/home.css
+++ b/home.css
@@ -1,176 +1,188 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Fonte */
-*{ 
-/* Definições fixas do site */
+* {
+    /* Definições fixas do site */
     padding: 0;
-/* Zerando o padding */
+    /* Zerando o padding */
     margin: 0;
-/*  Zerando a margem */
+    /*  Zerando a margem */
     box-sizing: border-box;
-/* Pra página não quebrar */
+    /* Pra página não quebrar */
     list-style: none;
-/* Tirando o estilo das listas */
+    /* Tirando o estilo das listas */
     text-decoration: none;
-/* Tirando o sub-linhado */
+    /* Tirando o sub-linhado */
     font-family: Poppins;
-/* Fonte da página */
+    /* Fonte da página */
 }
 
-body{
-   background-color: #0D0D0D;
-/* Cor de fundo da página */
+body {
+    background-color: #0D0D0D;
+    /* Cor de fundo da página */
 }
 
-html{
-/* Definições na raiz do html */
+html {
+    /* Definições na raiz do html */
     width: 100%;
-/* Para ocupar 100% da largura */
+    /* Para ocupar 100% da largura */
     height: 100vh;
-/*  100vh para que a página tenha a mesma altura do navegador */
+    /*  100vh para que a página tenha a mesma altura do navegador */
 }
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
-header{
-    padding: min(4vh, 8rem);
-/*  Tamanho do cabeçalho */
+header {
+    padding: min(2vh, 4rem);
+    /*  Tamanho do cabeçalho */
     background-color: #0D0D0D;
-/* Cor de fundo */
+    /* Cor de fundo */
     display: flex;
-/* Tornando Flex */
+    /* Tornando Flex */
     justify-content: space-between;
-/*  Justificando o conteúdo */
+    /*  Justificando o conteúdo */
     align-items: center;
-/* Alinhando itens ao centro */
+    /* Alinhando itens ao centro */
     text-align: center;
-/* Alinhando os textos ao centro */
+    /* Alinhando os textos ao centro */
     position: sticky;
-/* Fixando o cabeçalho ao rolar a página */
-top: 0;
-/* Zerando a parte de cima */
-left: 0;
-/* Zerando a esquerda (Que é por onde o elemento aparece) */
-z-index: 999;
-/*  Dando prioridade */
-width: 100%;
-/* Pra ocupar 100% do espaço */
-overflow: hidden; /* */
+    /* Fixando o cabeçalho ao rolar a página */
+    top: 0;
+    /* Zerando a parte de cima */
+    left: 0;
+    /* Zerando a esquerda (Que é por onde o elemento aparece) */
+    z-index: 999;
+    /*  Dando prioridade */
+    width: 100%;
+    /* Pra ocupar 100% do espaço */
+    overflow: hidden;
+    /* */
+    font-size: 1.3rem;
 }
 
-header img{
-/* Estilização da logo */
+header img {
+    /* Estilização da logo */
     width: 5rem;
-/* Tamanho */
+    /* Tamanho */
     display: flex;
     /* Tornando Flex */
     align-items: center;
-/* Alinhando item a centro */
+    /* Alinhando item a centro */
     justify-content: center;
     /*  Justificando o conteúdo */
 }
 
-header a{
+header a {
     margin-right: 2vh;
-/*  Espaçento na esquerda */
+    /*  Espaçento na esquerda */
     color: #F2F2F2;
-/*  Cor do texto */
+    /*  Cor do texto */
     font-weight: 800;
     /* Peso da fonte */
 
 }
 
-header a:hover{
+header a:hover {
     border-bottom: 2.5px solid#643DF2;
     /* Criando uma borda sólida com cor */
     transition: 0.1s;
-/* Tempo de transição */
+    /* Tempo de transição */
 }
 
 /* Estilização do boneco de login */
-.login{
- width: 2rem;
-/* Largura da caixa */
- height: 2rem;
-/* Altura da caixa*/
- background-color: black;
-/* Cor de fundo da caixa */
- border-radius: 50%;
-/*  Arredondamento do container */
- border: solid 2px #F2F0EB;
- display: flex;
+.login {
+    width: 2rem;
+    /* Largura da caixa */
+    height: 2rem;
+    /* Altura da caixa*/
+    background-color: black;
+    /* Cor de fundo da caixa */
+    border-radius: 50%;
+    /*  Arredondamento do container */
+    border: solid 2px #F2F0EB;
+    display: flex;
     /* Tornando Flex */
- align-items: center;
+    align-items: center;
     /* Alinhando item a centro */
- justify-content: center;
+    justify-content: center;
     /*  Justificando o conteúdo */
- padding: 20px;
-/* Respiro */
+    padding: 20px;
+    /* Respiro */
 }
 
-.login:hover{
-/* Hover para mudarmos algo ao passar o mouse por cima */
-    background-color:#F2F0EB ;
+.login:hover {
+    /* Hover para mudarmos algo ao passar o mouse por cima */
+    background-color: #F2F0EB;
     transition: 0.8s;
     cursor: pointer;
 }
 
- header i{
-font-size: 1.5rem;
-/* Tamanho */
-color: #643DF2;
-/* Cor do texto */
- }
+header i {
+    font-size: 1.5rem;
+    /* Tamanho */
+    color: #643DF2;
+    /* Cor do texto */
+}
 
 
 
 
- 
+
 /* FIM DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
 
 
 /*  ESTILIZAÇÃO DA PRIMEIRA SESSÃO*/
 
- .section-1{
-        padding: min(5vh, 5rem);
-/* Tamanho */
-        background-color: #0D0D0D;
-/* Cor de fundo */
-        width: 100%;
-/* Preencher 100% do tamanho */
-    }
+.section-1 {
+    padding: min(5vh, 5rem);
+    /* Tamanho */
+    background-color: #0D0D0D;
+    /* Cor de fundo */
+    width: 100%;
+    /* Preencher 100% do tamanho */
+}
 
-    .container-carrossel{
-        overflow: hidden; /*Esconde partes das imagens que saem do container*/
-        width: 100%; /*O container ocupa toda a largura da página*/
-        max-width: 80vw; /* O container ocupa no máximo 80% da largura da viewport */
-        margin: auto; /*Centraliza o container*/
-        border: 3px solid #643DF2;
-        /* Criando uma borda sólida com cor */
-        border-radius: 20px;
-/*  Arredondamento do carrossel  */
-    }
-    
-    /*Estilo da faixa de imagens*/
-    .itens-carrossel{
-        display: flex; /*Coloca as imagens lado a lado em linha*/
-        transition: transform 0.5s ease;  /*Animação suave para a transição*/
-    }
-    
-    /*Cada item do carrossel*/ 
-    .carrossel-item{
-    flex: 0 0 100%;  /* Cada item ocupa 100% da largura do container*/
-    }
+.container-carrossel {
+    overflow: hidden;
+    /*Esconde partes das imagens que saem do container*/
+    width: 100%;
+    /*O container ocupa toda a largura da página*/
+    max-width: 80vw;
+    /* O container ocupa no máximo 80% da largura da viewport */
+    margin: auto;
+    /*Centraliza o container*/
+    border: 3px solid #643DF2;
+    /* Criando uma borda sólida com cor */
+    border-radius: 20px;
+    /*  Arredondamento do carrossel  */
+}
+
+/*Estilo da faixa de imagens*/
+.itens-carrossel {
+    display: flex;
+    /*Coloca as imagens lado a lado em linha*/
+    transition: transform 0.5s ease;
+    /*Animação suave para a transição*/
+}
+
+/*Cada item do carrossel*/
+.carrossel-item {
+    flex: 0 0 100%;
+    /* Cada item ocupa 100% da largura do container*/
+}
 
 /* Estilização das imagens */
-    img{
-    width: 100%; /*As imagens ocupam toda a largura do item*/
-    display: block; /*Garante que não haja espaçamento abaixo das imagens*/
-    }
+img {
+    width: 100%;
+    /*As imagens ocupam toda a largura do item*/
+    display: block;
+    /*Garante que não haja espaçamento abaixo das imagens*/
+}
 
-    #imagem3{
-        scroll-behavior: smooth;
+#imagem3 {
+    scroll-behavior: smooth;
 
-    }
+}
 
 
 
@@ -181,181 +193,181 @@ color: #643DF2;
 
 
 /* ESTILIZAÇÃO DA SEGUNDA SESSÃO */
-    .section2{
-        background-color: #0D0D0D;
-/* Cor de fundo */
-        padding: min(35vh, 30rem);
-/* Tamanho */
-        width: 100%;
-/* Preencher 100% do tamanho*/
-        color: white;
-/* Cor do texto */
-    }
-
-/* Caixa pai da sessão */
-    .container-section2{
-        display: flex;
-        /* Tornando Flex */
-        align-items: center;
-        /* Alinhando item a centro */
-        gap: 100px;
-/* Espaçamento entre os itens */
-    }
-
-
-
-.h1-button h1{
-    font-size: 6rem;
-/* Tamanho do texto */
-    margin-bottom: 30px;
-    /*  Espaçamento na parte de baixo */
-    text-align: center;
-}
-
-.h1-button p{
-    font-size: 3rem;
-/* Tamanho do texto */
-    margin-bottom: 30px;
-/*  Espaçamento na parte de baixo */
-}
-
-.h1-button p span{
-    color: #987cff;
-/* Cor do texto */
-    font-weight: 600;
-/* Peso da fonte */
-}
-
-
-.h1-button a button{
-    padding: 8px;
-/*  Folga dentro do botão */
-    text-align: center;
-/* Alinhando texto ao centro */
-width: 200px;
-/* Largura do botão */
-border-radius: 40px;
-/* Arredondamento do botão */
-background-color: #643DF2;
-/* Cor de fundo do botão */
-color: #F2F0EB;
-/* Cor do texto */
-border: 2px solid #987cff;
-/* Criando uma borda sólida com cor */
-cursor: pointer;
-/* Mudando o cursor */
-font-weight: 600;
-    /* Peso da fonte */
-}
-
-.h1-button a button:hover{
-    /* Hover para mudarmos algo ao passar o mouse por cima */
-    background-color: #987cff;
-    /* Cor do texto */
-    transition: 0.5s;
-/*  Tempo de transição */
-    color: #0D0D0D;
-/* Cor do texto */
-}
-
-/* Estilização da imagem */
-.img-section2{
-    width: 250rem;
-    height: auto;
-/* Tamanho da imagem */
-}
-
-
-
-/* ESTILIZAÇÃO DA TERCEIRA SESSÃO */
-.section3{
+.section2 {
     background-color: #0D0D0D;
-/* Cor de fundo */
-    padding: min(10vh, 20rem);
-/* Tamanho */
+    /* Cor de fundo */
+    padding: min(35vh, 30rem);
+    /* Tamanho */
     width: 100%;
-/* Preencher 100% do tamanho*/
+    /* Preencher 100% do tamanho*/
     color: white;
-/* Cor do texto */
+    /* Cor do texto */
 }
 
 /* Caixa pai da sessão */
-.container-section3{
+.container-section2 {
     display: flex;
     /* Tornando Flex */
     align-items: center;
     /* Alinhando item a centro */
     gap: 100px;
-/* Espaçamento entre os itens */
+    /* Espaçamento entre os itens */
 }
 
 
 
-.h1-button h1{
-font-size: 1.5rem;
-/* Tamanho do texto */
-margin-bottom: 30px;
-/*  Espaçamento na parte de baixo */
-text-align: center;
+.h1-button h1 {
+    font-size: 6rem;
+    /* Tamanho do texto */
+    margin-bottom: 30px;
+    /*  Espaçamento na parte de baixo */
+    text-align: center;
 }
 
-.h1-button p{
-font-size: 1rem;
-/* Tamanho do texto */
-margin-bottom: 30px;
-/*  Espaçamento na parte de baixo */
+.h1-button p {
+    font-size: 3rem;
+    /* Tamanho do texto */
+    margin-bottom: 30px;
+    /*  Espaçamento na parte de baixo */
 }
 
-.h1-button p span{
-color: #987cff;
-/* Cor do texto */
-font-weight: 600;
-/* Peso da fonte */
-}
-
-
-.h1-button a button{
-padding: 8px;
-/*  Folga dentro do botão */
-text-align: center;
-/* Alinhando texto ao centro */
-width: 200px;
-/* Largura do botão */
-border-radius: 40px;
-/* Arredondamento do botão */
-background-color: #643DF2;
-/* Cor de fundo do botão */
-color: #F2F0EB;
-/* Cor do texto */
-border: 2px solid #987cff;
-/* Criando uma borda sólida com cor */
-cursor: pointer;
-/* Mudando o cursor */
-font-weight: 600;
-/* Peso da fonte */
-}
-
-.h1-button a button:hover{
-/* Hover para mudarmos algo ao passar o mouse por cima */
-background-color: #987cff;
-/* Cor do texto */
-transition: 0.5s;
-/*  Tempo de transição */
-color: #0D0D0D;
-/* Cor do texto */
+.h1-button p span {
+    color: #987cff;
+    /* Cor do texto */
+    font-weight: 600;
+    /* Peso da fonte */
 }
 
 
-.span-section3{
+.h1-button a button {
+    padding: 8px;
+    /*  Folga dentro do botão */
+    text-align: center;
+    /* Alinhando texto ao centro */
+    width: 200px;
+    /* Largura do botão */
+    border-radius: 40px;
+    /* Arredondamento do botão */
+    background-color: #643DF2;
+    /* Cor de fundo do botão */
+    color: #F2F0EB;
+    /* Cor do texto */
+    border: 2px solid #987cff;
+    /* Criando uma borda sólida com cor */
+    cursor: pointer;
+    /* Mudando o cursor */
+    font-weight: 600;
+    /* Peso da fonte */
+}
+
+.h1-button a button:hover {
+    /* Hover para mudarmos algo ao passar o mouse por cima */
+    background-color: #987cff;
+    /* Cor do texto */
+    transition: 0.5s;
+    /*  Tempo de transição */
+    color: #0D0D0D;
+    /* Cor do texto */
+}
+
+/* Estilização da imagem */
+.img-section2 {
+    width: 250rem;
+    height: auto;
+    /* Tamanho da imagem */
+}
+
+
+
+/* ESTILIZAÇÃO DA TERCEIRA SESSÃO */
+.section3 {
+    background-color: #0D0D0D;
+    /* Cor de fundo */
+    padding: min(10vh, 20rem);
+    /* Tamanho */
+    width: 100%;
+    /* Preencher 100% do tamanho*/
+    color: white;
+    /* Cor do texto */
+}
+
+/* Caixa pai da sessão */
+.container-section3 {
+    display: flex;
+    /* Tornando Flex */
+    align-items: center;
+    /* Alinhando item a centro */
+    gap: 100px;
+    /* Espaçamento entre os itens */
+}
+
+
+
+.h1-button h1 {
+    font-size: 1.5rem;
+    /* Tamanho do texto */
+    margin-bottom: 30px;
+    /*  Espaçamento na parte de baixo */
+    text-align: center;
+}
+
+.h1-button p {
+    font-size: 1rem;
+    /* Tamanho do texto */
+    margin-bottom: 30px;
+    /*  Espaçamento na parte de baixo */
+}
+
+.h1-button p span {
+    color: #987cff;
+    /* Cor do texto */
+    font-weight: 600;
+    /* Peso da fonte */
+}
+
+
+.h1-button a button {
+    padding: 8px;
+    /*  Folga dentro do botão */
+    text-align: center;
+    /* Alinhando texto ao centro */
+    width: 200px;
+    /* Largura do botão */
+    border-radius: 40px;
+    /* Arredondamento do botão */
+    background-color: #643DF2;
+    /* Cor de fundo do botão */
+    color: #F2F0EB;
+    /* Cor do texto */
+    border: 2px solid #987cff;
+    /* Criando uma borda sólida com cor */
+    cursor: pointer;
+    /* Mudando o cursor */
+    font-weight: 600;
+    /* Peso da fonte */
+}
+
+.h1-button a button:hover {
+    /* Hover para mudarmos algo ao passar o mouse por cima */
+    background-color: #987cff;
+    /* Cor do texto */
+    transition: 0.5s;
+    /*  Tempo de transição */
+    color: #0D0D0D;
+    /* Cor do texto */
+}
+
+
+.span-section3 {
 
     color: #987cff;
 }
 
 /* Estilização da imagem */
-.img-section3{
-width: 80rem;
-height: auto;
-/* Tamanho da imagem */
+.img-section3 {
+    width: 80rem;
+    height: auto;
+    /* Tamanho da imagem */
 }
 
 
@@ -363,83 +375,83 @@ height: auto;
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
-    footer{
-        padding: min(6vh, 3rem);
-/*  Tamanho */
-        background-color: #F2F0EB;
-/* Cor de fundo */
-width: 100%;
-/* Preencher 100% do tamanho */
-display: flex;
-    }
-    
+footer {
+    padding: min(6vh, 3rem);
+    /*  Tamanho */
+    background-color: #F2F0EB;
+    /* Cor de fundo */
+    width: 100%;
+    /* Preencher 100% do tamanho */
+    display: flex;
+}
 
-    footer i{
-        margin-top: 5px;
+
+footer i {
+    margin-top: 5px;
     color: #0D0D0D;
-/* Cor do texto */
-    }
+    /* Cor do texto */
+}
 
-    footer i span{
-        margin-left: 5px;
-/* Espaçamento na esquerda */
-        font-weight: 800;
-        /* Peso da fonte */
-    }
+footer i span {
+    margin-left: 5px;
+    /* Espaçamento na esquerda */
+    font-weight: 800;
+    /* Peso da fonte */
+}
 
 
-    .container-footer{
-display: flex;
-/* Tornando flex (deixando os itens na vertical) */
-gap: 50px;
-/*  Espaçamento entre os itens */
-    }
+.container-footer {
+    display: flex;
+    /* Tornando flex (deixando os itens na vertical) */
+    gap: 50px;
+    /*  Espaçamento entre os itens */
+}
 
-    .itens-footer1{
-        display: flex;
-        /* Tornando Flex */
-        flex-direction: column;
-     justify-content: center;
-        /*  Justificando o conteúdo */
-     align-items: center;
-        /* Alinhando item a centro */
-     font-size: 1.3rem;
+.itens-footer1 {
+    display: flex;
+    /* Tornando Flex */
+    flex-direction: column;
+    justify-content: center;
+    /*  Justificando o conteúdo */
+    align-items: center;
+    /* Alinhando item a centro */
+    font-size: 1.3rem;
     /* Tamanho do texto */
-    }
+}
 
 
 
-    footer ul li{
-        color: #0D0D0D;
-        font-weight: 800;
-        /* Peso da fonte */
-        font-size: 1.2rem;
-        /* Tamanho do texto */
-    }
+footer ul li {
+    color: #0D0D0D;
+    font-weight: 800;
+    /* Peso da fonte */
+    font-size: 1.2rem;
+    /* Tamanho do texto */
+}
 
-    footer ul li span{
-color: #643DF2;     
-    }
+footer ul li span {
+    color: #643DF2;
+}
 
-            footer ul li:hover{
-                /* Hover para mudarmos algo ao passar o mouse por cima */
-                color: #643DF2; 
-                transition: 0.4s;  
-            }
+footer ul li:hover {
+    /* Hover para mudarmos algo ao passar o mouse por cima */
+    color: #643DF2;
+    transition: 0.4s;
+}
 
 
-            footer img{
-        margin-left: 7rem;
-                width: 10rem;
-                height: auto;
-                display: flex;
-                /* Tornando Flex */
-                align-items: center;
-                /* Alinhando item a centro */
-                justify-content: center;
-           /*  Justificando o conteúdo */
+footer img {
+    margin-left: 7rem;
+    width: 10rem;
+    height: auto;
+    display: flex;
+    /* Tornando Flex */
+    align-items: center;
+    /* Alinhando item a centro */
+    justify-content: center;
+    /*  Justificando o conteúdo */
 
-                    }
+}
 
 
 
@@ -447,14 +459,14 @@ color: #643DF2;
 
 
 
-@media (max-width: 834px){
-    
- 
+@media (max-width: 834px) {
 
 
 
 
-    .section-1{
+
+
+    .section-1 {
         display: flex;
         align-items: center;
         justify-content: center;
