--- a/home.css
+++ b/home.css
@@ -470,5 +470,6 @@ footer img {
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
     }
 }
