--- a/home.css
+++ b/home.css
@@ -222,6 +222,7 @@ img {
     margin-bottom: 30px;
     /*  Espaçamento na parte de baixo */
     text-align: center;
+    display: flex;
 }
 
 .h1-button p {
@@ -459,17 +460,23 @@ footer img {
 
 
 
-@media (max-width: 834px) {
+@media (max-width: 900px) {
 
 
-
-
-
-
-    .section-1 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
+    .section2{
+        padding: 12rem;
+        
     }
+
+    .container-section2{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 5rem;
+    }
+
+
+
 }
